# nightreign-relic-build-generator

./: .gitignore  README.md  pyproject.toml
mining/: .gitignore  README.md  parse.py
src/nightreign_build_generator/: bnd4.py  utility.py
src/nightreign_build_generator/resources/: __init__.py  effects.json  scores_duchess.json  scores_executor.json  scores_guardian.json  scores_ironeye-bleed.json  scores_ironeye-poison.json  scores_recluse.json  scores_wylder.json
src/nightreign_relic_build_generator/: application.py  bnd4.py  bnd_decrypter.py  build_finder.py  finder.py  nightreign.py  term_style.py  utility.py
src/nightreign_relic_build_generator/resources/: effects.json  items.json  new_items.json  relic-ids.json  scores_executor.json  scores_guardian-deep-of-night.json  scores_ironeye-bleed.json  scores_ironeye-deep-of-night.json  scores_ironeye-frost.json  scores_ironeye-poison.json  scores_ironeye.json  scores_raider-fist.json  scores_raider-negation-at-low-hp.json  scores_raider.json  scores_wylder-fist.json  scores_wylder.json  settings_executor.json  settings_guardian.json  test.txt  test_settings.json
tests/: test_csv_load.py  test_json5.py  test_package_version.py
