[project]
name = "nightreign_relic_build_generator"
version = "0.1.0"
description = "A build finder/generator for NightReign"
authors = [
    {name = "Jacob McIntosh",email = "nacitar.sevaht@gmail.com"}
]
readme = "README.md"
license = "Unlicense"
requires-python = ">=3.11"
dependencies = [
    "cryptography (>=45.0.6,<46.0.0)",
    "types-tqdm (>=4.67.0.20250809,<5.0.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "nightreign_relic_build_generator", from = "src"}]

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
mypy = "^1.18.2"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
skip-magic-trailing-comma = true

[tool.isort]
line_length = 79
profile = "black"

[tool.mypy]
strict = true

[tool.poetry.scripts]
app = "nightreign_relic_build_generator.__main__:main"
checks = "nightreign_relic_build_generator.devtools.checks:main"
